Base Url, Api Url, Api Key

--- a/example-widget/boxes.html
+++ b/example-widget/boxes.html
@@ -2,10 +2,10 @@
 
 <head>
   <!-- BoxItNow CSS -->
-  <link rel="stylesheet" type="text/css" href="http://localhost/boxitnow/css/bin.cache.min.css" />
+  <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
 
   <!-- BoxItNow JS -->
-  <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.js"></script>
+  <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
 
   <!-- CLIENT CSS -->
   <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -88,8 +88,8 @@
     BIN.Bootstrap.load({
       //the root of the BIN HOST site
 	  //http://localhost/bindev/
-      apiUrl: 'http://localhost/boxitnow/',
-      apiKey: "VGL6TmfXuFMprVPy"
+    apiUrl: 'http://[API ENDPOINT]/',
+    apiKey: '[API KEY]'
 
     }, function() {
 
