--- a/example-widget/media.html
+++ b/example-widget/media.html
@@ -2,10 +2,10 @@
 
 <head>
   <!-- BoxItNow CSS -->
-  <link rel="stylesheet" type="text/css" href="http://localhost/boxitnow/css/bin.cache.min.css" />
+  <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
 
   <!-- BoxItNow JS -->
-  <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.js"></script>
+  <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
 
   <!-- CLIENT CSS -->
   <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -87,8 +87,8 @@
     //LOAD bin libraries
     BIN.Bootstrap.load({
       //the root of the BIN HOST site
-      apiUrl: 'http://localhost/boxitnow/',
-      apiKey: "VGL6TmfXuFMprVPy"
+      apiUrl: 'http://[API ENDPOINT]/',
+      apiKey: '[API KEY]'
 
     }, function() {
 
@@ -101,7 +101,7 @@
         //(optional) required if loading user design, user media or user projects
         userToken: '2328e16dcef34fe4cb54a57aace29d05',
         //(require for design studio)design information to load
-      
+
 
       });
     });
