--- a/example-widget/viewer.html
+++ b/example-widget/viewer.html
@@ -1,10 +1,10 @@
 <html>
     <head>
       <!-- BoxItNow CSS -->
-      <link rel="stylesheet" type="text/css" href="http://localhost/boxitnow/css/bin.cache.min.css" />
+      <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
 
       <!-- BoxItNow JS -->
-      <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.js"></script>
+      <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
 
         <!-- CLIENT CSS -->
         <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -25,8 +25,8 @@
             //LOAD bin libraries
             BIN.Bootstrap.load({
                 //the root of the BIN HOST site
-                apiUrl: 'http://localhost/boxitnow/',
-                apiKey: "VGL6TmfXuFMprVPy"
+                apiUrl: 'http://[API ENDPOINT]/',
+                apiKey: '[API KEY]'
 
             }, function () {
 
@@ -45,8 +45,8 @@
                     },
 
                     options:{
-                        //rotate on start (inverted)
-                        rotate: true,
+                        //rotate on start
+                        rotate: false,
                         //Initial rotate speed (radians)
                         rotateSpeed: .005,
                         //Initial viewing angle (degrees)
