--- a/example-widget/media.html
+++ b/example-widget/media.html
@@ -2,10 +2,10 @@
 
 <head>
   <!-- BoxItNow CSS -->
-  <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
+  <link rel="stylesheet" type="text/css" href="http://xxx/css/bin.cache.min.css" />
 
   <!-- BoxItNow JS -->
-  <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
+  <script type="text/javascript" src="http://xxx/js/bin.bootstrap.js"></script>
 
   <!-- CLIENT CSS -->
   <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
