--- a/example-widget/viewer.html
+++ b/example-widget/viewer.html
@@ -1,10 +1,10 @@
 <html>
     <head>
       <!-- BoxItNow CSS -->
-      <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
+      <link rel="stylesheet" type="text/css" href="http://xxx/css/bin.cache.min.css" />
 
       <!-- BoxItNow JS -->
-      <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
+      <script type="text/javascript" src="http://xxx/js/bin.bootstrap.js"></script>
 
         <!-- CLIENT CSS -->
         <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
