--- a/example-widget/viewer.html
+++ b/example-widget/viewer.html
@@ -1,10 +1,12 @@
 <html>
     <head>
       <!-- BoxItNow CSS -->
-      <link rel="stylesheet" type="text/css" href="http://apistaging.boxitnow.com/css/bin.cache.min.css" />
+      <link rel="stylesheet" type="text/css" href="http://[API ENDPOINT]/css/bin.cache.min.css" />
 
+
+      <!-- (Required) -->
       <!-- BoxItNow JS -->
-      <script type="text/javascript" src="http://apistaging.boxitnow.com/js/bin.bootstrap.js"></script>
+      <script type="text/javascript" src="http://[API ENDPOINT]/js/bin.bootstrap.js"></script>
 
         <!-- CLIENT CSS -->
         <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -45,13 +47,24 @@
                     },
 
                     options:{
-                        //rotate on start
+                        //Rotate Design on viewer start
+                        //default/null = false
                         rotate: false,
-                        //Initial rotate speed (radians)
-                        rotateSpeed: .005,
-                        //Initial viewing angle (degrees)
+                        //Initial Design rotate speed (radians [0,1])
+                        //default/null = 0
+                        rotateSpeed: .0,
+                        //Initial Design viewing angle (degrees, [-180, 180])
+                        //default/null = 0
                         startAngle: 45,
-                      }
+                        //Initial Design zoom ([.5,3])
+                        //default/null = 1
+                        zoom: 1,
+                      },
+
+                  //**(optional)
+                  //**Fires after studio is loaded
+                  	onLoad: function(userSessionHandle) {
+                  	},
                 });
             });
         </script>
