Finish Deprecation Comment

--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -141,6 +141,8 @@
 
           parameters: {
             Length: "15.1",
+            ...,
+            Finish: "Kraft" //** Deprecated **//
           }
 
 
