--- a/api-doc.html
+++ b/api-doc.html
@@ -989,7 +989,7 @@ margin-bottom: 20px;
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Item-categoryGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://apistaging.boxitnow.com/api/category"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://dev.boxitnow.com/api/category"</code></pre>
                           </div>
 
   <!--
@@ -1166,7 +1166,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Item-categoryIdItemsGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://apistaging.boxitnow.com/api/category/{id}/items"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://dev.boxitnow.com/api/category/{id}/items"</code></pre>
                           </div>
 
 
@@ -1392,7 +1392,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Item-itemStudioIdGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://apistaging.boxitnow.com/api/item/studio/{id}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://dev.boxitnow.com/api/item/studio/{id}"</code></pre>
                           </div>
 
 
@@ -1610,7 +1610,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Resize-resizeCompiledPdfIdGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://apistaging.boxitnow.com/api/resize/compiledPdf/{id}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://dev.boxitnow.com/api/resize/compiledPdf/{id}"</code></pre>
                           </div>
 
 
@@ -1826,7 +1826,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Resize-resizeInfoIdGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://apistaging.boxitnow.com/api/resize/info/{id}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">get</span> "https://dev.boxitnow.com/api/resize/info/{id}"</code></pre>
                           </div>
 
 
@@ -2062,7 +2062,7 @@ if ($@) {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-User-loginPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://apistaging.boxitnow.com/api/login?loginForm[username]=&loginForm[password]="</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://dev.boxitnow.com/api/login?loginForm[username]=&loginForm[password]="</code></pre>
                           </div>
 
                             <div class="tab-pane" id="examples-User-loginPost-0-javascript">
@@ -2312,7 +2312,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-User-registerPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://apistaging.boxitnow.com/api/register?registerForm[username]=&registerForm[password]=&registerForm[email]=&registerForm[firstName]=&registerForm[lastName]=&registerForm[activate]=&registerForm[emphemeral]="</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://dev.boxitnow.com/api/register?registerForm[username]=&registerForm[password]=&registerForm[email]=&registerForm[firstName]=&registerForm[lastName]=&registerForm[activate]=&registerForm[emphemeral]="</code></pre>
                           </div>
 
                             <div class="tab-pane" id="examples-User-registerPost-0-javascript">
@@ -2741,7 +2741,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-User-userMakePersistentPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://apistaging.boxitnow.com/api/user/makePersistent?target[username]=&target[password]=&newUser[username]="</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://dev.boxitnow.com/api/user/makePersistent?target[username]=&target[password]=&newUser[username]="</code></pre>
                           </div>
 
 
@@ -3029,7 +3029,7 @@ try {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-User-userMergePost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://apistaging.boxitnow.com/api/user/merge?target[username]=&target[password]=&source[username]=&source[password]="</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X <span style="text-transform: uppercase;">post</span> "https://dev.boxitnow.com/api/user/merge?target[username]=&target[password]=&source[username]=&source[password]="</code></pre>
                           </div>
 
                             <div class="tab-pane" id="examples-User-userMergePost-0-javascript">
