--- a/api-doc.html
+++ b/api-doc.html
@@ -1860,7 +1860,7 @@ defs.inline_response_token = {
                             <div class="tab-pane" id="examples-Resize-resizeInfoIdGet-0-javascript">
                               <pre class="prettyprint"><code class="language-js">
     $.ajax({
-      url: {API_URL}/api/category,
+      url: {API_URL}/api/resize/info/{id},
       type: 'GET',
       success: function (value) {
 
